--- a/front-web/src/components/Header/styles.css
+++ b/front-web/src/components/Header/styles.css
@@ -1,26 +1,26 @@
 .main-header {
-    height: 30px;
-    padding: 20px 40px;
-    display: flex;
-    background-color: var(--color-darkslategray);
+  height: 30px;
+  padding: 20px 40px;
+  display: flex;
+  background-color: var(--color-darkslategray);
+}
+
+.logo-text {
+  font-weight: bold;
+  font-size: 24px;
+  margin-left: 15px;
+}
+
+.logo-text-1 {
+  color: var(--color-coral);
+}
+
+.logo-text-2 {
+  color: #3fc3eb;
+}
+
+@media (max-width: 850px) {
+  .main-header {
+    justify-content: center;
   }
-  
-  .logo-text {
-    font-weight: bold;
-    font-size: 24px;
-    margin-left: 15px;
-  }
-  
-  .logo-text-1 {
-    color: var(--color-coral);
-  }
-  
-  .logo-text-2 {
-    color: #FFF;
-  }
-  
-  @media (max-width: 850px) {
-    .main-header {
-      justify-content: center;
-    }
-  }
+}
