--- a/front-web/src/App.css
+++ b/front-web/src/App.css
@@ -1,9 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Play:wght@400;700&display=swap');
 
 :root {
-  --color-turquoise: #3fc3eb;
+  --color-turquoise: #349bbb;
   --color-coral: #da6900;
-  --color-dimgray: #82bfe2;
+  --color-dimgray: #122d3a;
   --color-darkslategray:  #181818;
   --color-black: #03042c;
 }
@@ -26,7 +26,7 @@ a {
 }
 
 .text-primary {
-  color: var(--color-turquoise);
+  color:#0fa10a;
 }
 
 .text-secondary {
